--- a/software/client/app/src/main/res/layout/activity_login.xml
+++ b/software/client/app/src/main/res/layout/activity_login.xml
@@ -56,8 +56,8 @@
         android:layout_marginLeft="69dp"
         android:layout_marginEnd="69dp"
         android:layout_marginRight="69dp"
-        android:layout_marginBottom="48dp"
-        app:layout_constraintBottom_toTopOf="@+id/frameLayout2"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout">
@@ -71,23 +71,35 @@
             android:maxLength="@integer/default_length" />
     </android.support.design.widget.TextInputLayout>
 
-    <FrameLayout
-        android:id="@+id/frameLayout2"
+    <LinearLayout
+        android:id="@+id/linearLayout3"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="68dp"
-        android:layout_marginLeft="68dp"
-        android:layout_marginEnd="68dp"
-        android:layout_marginRight="68dp"
-        android:layout_marginBottom="161dp"
+        android:layout_marginStart="69dp"
+        android:layout_marginLeft="69dp"
+        android:layout_marginEnd="69dp"
+        android:layout_marginRight="69dp"
+        android:layout_marginBottom="114dp"
+        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">
 
+        <CheckBox
+            android:id="@+id/check_remember_me"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/text_remember_me" />
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="54dp"
+            android:layout_weight="1" />
+
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="horizontal">
 
             <Button
@@ -114,7 +126,6 @@
                 tools:layout_editor_absoluteX="227dp"
                 tools:layout_editor_absoluteY="280dp" />
         </LinearLayout>
-
-    </FrameLayout>
+    </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
