--- a/software/client/app/src/main/res/layout/nav_header_home.xml
+++ b/software/client/app/src/main/res/layout/nav_header_home.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="@dimen/nav_header_height"
-    android:background="@drawable/side_nav_bar"
     android:gravity="bottom"
     android:orientation="vertical"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -17,23 +16,8 @@
         android:id="@+id/nav_profile_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="@string/nav_header_desc"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        app:srcCompat="@mipmap/ic_launcher_round" />
+        app:srcCompat="@drawable/trackme_logo" />
 
-    <TextView
-        android:id="@+id/nav_header_name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        tools:text="Name" />
-
-
-    <TextView
-        android:id="@+id/name_header_info"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:text="VAT/SSN" />
 
 </LinearLayout>
